# bazel-7.1.0rc1-coverage-bug

./: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  maven_install.json
app/: BUILD.bazel
app/src/test/com/example/: ContextKotlinTest.kt  ContextTest.java
